# meshcheck

./: .bumpversion.cfg  .gitignore  .pylintrc  .satefile  Pipfile  README.md  README.org  cube.json  example-00.json  example.json  meshcheck.py  setup.cfg
meshcheck/: __main__.py  angle.py  app.py  camera.py  camera_controller.py  events.py  old.py  shader.py  text_render.py  util.py  window.py
meshcheck/shaders/: basic.frag.glsl  basic.vert.glsl  default.frag.glsl  default.geom.glsl  default.vert.glsl  text.frag.glsl  text.vert.glsl
scripts/: meshcheck
