[metadata]
name = meshcheck
version = attr: meshcheck.__version__
author = Nicholas Bishop
author_email = nicholasbishop@gmail.com
url = https://github.com/nicholasbishop/meshcheck
description = Simple 3D mesh visualization tool
long_description = See https://github.com/nicholasbishop/meshcheck for more information.

[options]
scripts = scripts/sate
packages = meshcheck
install_requires = attrs~=17.3.0; glfw~=1.4.0; ModernGL~=4.2.1; pycairo~=1.11.1; PyGObject~=3.27.1
